[package]
name = "websocket-relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
futures-util = "0.3.21"
tokio = { version = "1", features = ["full"] }
tungstenite = "0.17.3"
tokio-tungstenite = "0.17.2"
log = "0.4.17"
env_logger = "0.9.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
